@@ -3,6 +3,8 @@ python-reahl (3.2) unstable; urgency=low
  * Changed Label to subsume what was done by InputLabel previously.
  * Added auto restart for the reahl dev webserver on filesystem changes (blueprint: reahl-serve-with-auto-reload).
  * Added dependency on watchdog.
+ * Added support for del_ methods to reahl.tofu.Fixture to automatically tear down what new_ method created.
+ * Deprecated EasterEgg.set_module_path in fafour of using its .location.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 19 Mar 2015 13:18:00 +0200
 
